# dataset-weighting-nn

./: .gitignore  README.md  dw-pipeline.py  justfile  pyproject.toml  run_all.sh
configs/: config.yaml  datasets.yaml  default.yaml
notebooks/: quantitative.ipynb  results_quantitative.ipynb
scripts/: download_openimages.py  make_openimages_manifest.py  openimages_downloader.py
src/dataset_weighting_nn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/dw/: npy.py
src/dw/adapters/: base.py  gta_sfm.py  hypersim.py  image_glob.py  openimages_manifest.py  pattern_glob.py
src/dw/cli/: aggregate_weights.py  extract_embeddings.py  retrieval_1nn.py
src/dw/features/: dinov2.py  preprocess.py
